# livebooks

./: arXiv_downloader.livemd  ash_fsm.livemd  book_reviews.livemd  bumblebee_text_mining.livemd  demo_chat.livemd  elixir_python.livemd  fsm_bot.livemd  github_api.livemd  happydata.livemd  hf_api.livemd  hopfield.livemd  huggingface_metadata.livemd  lms.livemd  mermaid.livemd  semantic_search.livemd  symex.livemd  yt_playlists.livemd  yt_viewer.livemd
python_scripts/: pyproject.toml  yt.py
text_mining/: mix.exs
text_mining/lib/: base.ex  clustering.ex  embedding_comparator.ex  model.ex  text_embedder.ex  text_mining.ex
youtube_organizer/: mix.exs
youtube_organizer/lib/: native.ex  yt_org.ex
youtube_organizer/lib/app/: auth.ex
youtube_organizer/lib/boundary/: playlist_fetcher.ex  youtube_client.ex
youtube_organizer/lib/core/: model.ex  record_parser.ex  wordcloud.ex
youtube_organizer/native/youtube_organizer/: Cargo.toml
youtube_organizer/native/youtube_organizer/src/: implementations.rs  lib.rs  main.rs
