[tool.poetry]
name = "python-scripts"
version = "0.1.0"
description = ""
authors = ["Jakub 'lambdaofgod' Bartczuk <bartczukkuba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapetube = "^2.5.1"
fire = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
