[package]
name = "youtube_organizer"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "youtube_organizer"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
clap = {version = "4.4.12", features = ["derive"]}
lazy_static = "1.4.0"
regex = "1.10.2"
rustler = "0.27.0"
wordcloud-rs = "0.1.14"
